--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,30 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>FraudShield</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
+
 <body>
 
-<!-- NAVBAR -->
+<!-- ================= NAVBAR ================= -->
 <nav class="navbar">
     <div class="logo">🛡 FraudShield</div>
+
     <ul class="nav-links" id="navLinks">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#how">How It Works</a></li>
         <li><a href="#check">Check Fraud</a></li>
     </ul>
+
     <div class="hamburger" onclick="toggleMenu()">☰</div>
 </nav>
 
-<!-- HERO -->
+<!-- ================= HERO WITH VIDEO ================= -->
 <section id="home" class="hero">
-    <h1>AI Powered Fraud Detection</h1>
-    <p>Secure. Intelligent. Real-Time Protection.</p>
-    <a href="#check" class="btn">Get Started</a>
+
+    <!-- Background Video -->
+    <video class="hero-video" autoplay muted loop playsinline preload="auto">
+        <source src="./6282371-hd_1080_1920_30fps.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <!-- Dark Overlay -->
+    <div class="hero-overlay"></div>
+
+    <!-- Hero Content -->
+    <div class="hero-content">
+        <h1>AI Powered Fraud Detection</h1>
+        <p>Secure. Intelligent. Real-Time Protection.</p>
+        <a href="#check" class="btn">Get Started</a>
+    </div>
+
 </section>
 
-<!-- ABOUT -->
+<!-- ================= ABOUT ================= -->
 <section id="about" class="section">
     <h2>About FraudShield</h2>
     <p>
@@ -35,46 +62,55 @@
     </p>
 </section>
 
-<!-- HOW IT WORKS -->
+<!-- ================= HOW IT WORKS ================= -->
 <section id="how" class="section dark">
     <h2>How It Works</h2>
+
     <div class="steps">
         <div class="step">
-            <h3>1️⃣ Secure Login</h3>
+            <h3>🔐 Secure Login</h3>
             <p>JWT authentication ensures safe access.</p>
         </div>
+
         <div class="step">
-            <h3>2️⃣ Enter Details</h3>
+            <h3>📊 Enter Details</h3>
             <p>Transaction data is analyzed in real-time.</p>
         </div>
+
         <div class="step">
-            <h3>3️⃣ AI Decision</h3>
+            <h3>🤖 AI Decision</h3>
             <p>Machine learning predicts fraud instantly.</p>
         </div>
     </div>
 </section>
 
-<!-- AUTH SECTION -->
+<!-- ================= AUTH ================= -->
 <section class="section">
     <h2>Account Access</h2>
+
     <div class="auth-container">
 
         <div class="auth-box">
-            <h3>Signup</h3>
+            <h3>Create Account</h3>
+
             <input type="text" id="signupName" placeholder="Full Name">
             <input type="email" id="signupEmail" placeholder="Email">
             <input type="password" id="signupPassword" placeholder="Password">
+
             <select id="signupRole">
                 <option value="user">User</option>
                 <option value="admin">Admin</option>
             </select>
+
             <button onclick="signup()">Signup</button>
         </div>
 
         <div class="auth-box">
             <h3>Login</h3>
+
             <input type="email" id="email" placeholder="Email">
             <input type="password" id="password" placeholder="Password">
+
             <button onclick="login()">Login</button>
             <button onclick="logout()" class="logout">Logout</button>
         </div>
@@ -82,9 +118,10 @@
     </div>
 </section>
 
-<!-- FRAUD CHECK -->
+<!-- ================= FRAUD CHECK ================= -->
 <section id="check" class="section dark">
     <h2>Check Transaction</h2>
+
     <div class="card">
 
         <input type="number" id="amount" placeholder="Transaction Amount">
@@ -130,5 +167,6 @@
 </footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
